_assets/stylesheets/app.sass
@import "compass"
@import "compass/reset"

$site-primary: #eb4
$site-secondary: #F5F0EC
$body-family: "museo-slab", Helvetica, Arial, sans-serif
$headings-family: "futura-pt", Helvetica, Arial, sans-serif
$misc-family: "courier-prime", Courier, "Courier New", sans-serif
$body-color: #443

*
  box-sizing: border-box

body
  font-family: $body-family
  color: darken($body-color, 5%)
  border-top: 3px solid darken($site-primary, 10%)
  background: $site-secondary

h1, h2, h3, h4, h5, h6
  font-family: $headings-family

a
  color: black
  text-decoration: none
  &:hover
    color: darken($site-primary, 14%)
    transition: all 260ms linear
 
.top-banner
  position: relative
  font-family: $headings-family
  text-align: center
  margin-bottom: 2em
  padding: 60px 20px
  background: $site-primary url(asset-path('background.jpg')) top center
  background-size: cover
  color: #332
  h2, h3
    margin-bottom: 10px
    text-transform: uppercase
    a
      color: #332
      &:hover
        color: #332
  h2
    font-size: 4em
    font-weight: bold
    letter-spacing: 0.08em
  h3
    font-size: 1.4em
    letter-spacing: 0.15em
    
.content-main
  max-width: 940px
  margin: 0 auto
  padding: 20px 60px
  background: $site-secondary
  
@media screen and (max-width: 768px)
  .content-main
    padding: 20px

.post-list
  margin: 2em auto
  max-width: 860px

.post-link
  background: #fff
  &:hover
    border-color: darken(#e6e6e6, 2%)
    i
      opacity: 1
    .title
      color: black
  .coming-soon &
    background: #FBF8F5
    border: 1px solid transparent
    color: #aaa
    .title:before
      content: "Coming Soon: "
    &:hover .title
      color: #aaa
    .description
      color: #aaa
  display: block
  border: 1px solid lighten(#e6e6e6, 2%)
  margin-bottom: 1em
  padding: 1em
  .title, .description
    display: block
    line-height: 160%
  .title
    font-family: $headings-family
    font-size: 1.2em
    font-weight: 700
    margin-bottom: 0.3em
    text-transform: uppercase
    i
      opacity: 0.5
  .description
    color: $body-color
  
.post-title
  position: relative
  font-size: 2em
  line-height: 1.3em
  padding: 0.8em
  font-weight: 600
  letter-spacing: -0.03em
  text-align: center
  border-bottom: 4px double #ddd
  margin-bottom: 1em
  // &:after
  //   display: block
  //   position: absolute
  //   bottom: -9px
  //   left: 50%
  //   content: "|"
  //   width: 8px
  //   margin-left: -4px
  //   text-align: center
  //   font-size: 15px
  //   line-height: 15px
  //   color: #ddd
  //   background: $site-secondary
.post
  a
    text-decoration: underline
  p, ul, ol
    line-height: 150%
    margin-bottom: 1.5em
  b, strong
    font-weight: bold
  ol, ul
    margin-left: 2.5em
    margin-right: 1em
    li
      margin-bottom: 1em
  ul
    list-style: disc
  ol
    list-style: decimal
  blockquote
    display: block
    padding: 0.75em
    margin-bottom: 1.5em
    line-height: 150%
    border: 1px solid lighten(#e6e6e6, 2%)
    background: white
    p:last-child
      margin-bottom: 0
    .attribution
      display: block
      margin-top: 0.5em
      color: lighten($body-color, 35%)
      font-style: italic
  h3
    font-size: 1.4em
    font-weight: 700
    margin: 1.5em 0 0.75em
  hr
    margin: 1.5em 3em
    border: 0
    border-bottom: 1px dashed #ccc
    
.chapter-nav
  padding: 0.5em 0
  text-align: center
    
a.nav
  display: inline-block
  font-size: 1.2em
  padding: 0.6em 0.8em
  border: 1px solid transparent
  color: #847864
  background: darken($site-secondary, 3%)
  +transition(all 320ms)
  &:hover
    background: darken($site-secondary, 6%)
    // background: $site-primary
    // border-color: darken($site-primary, 0.3)

a.nav-toc
  border: 1px solid transparent
  
a.nav-next
  &:after
    font-family: FontAwesome
    content: "\f061"
    margin-left: 5px
    
a.nav-prev
  &:before
    font-family: FontAwesome
    content: "\f060"
    margin-right: 5px

.site-intro
  font-size: 1.2em
  line-height: 150%
  font-style: italic
  margin: 1em 0
  color: darken($body-color, 10%)
  b
    font-weight: 600
    
.credits
  font-family: $misc-family
  text-transform: uppercase
  padding: 1.5em
  margin-top: 2em
  font-size: 0.72em
  color: #999
  text-align: center
  background: #333
  a
    color: #ccc
    &:hover
      color: lighten(#ccc, 14%)


.logo-icon
  position: absolute
  left: 50%
  bottom: -50px
  margin-left: -50px
  a
    color: $site-secondary
    &:hover
      color: #fff
  .fa-bolt
    position: absolute
    z-index: 3
    top: 26px
    left: 40px

.diamond
  width: 0
  height: 0
  border: 50px solid transparent
  border-bottom-color: #333
  position: relative
  top: -50px
  &:after
    content: ''
    position: absolute
    left: -50px
    top: 50px
    width: 0
    height: 0
    border: 50px solid transparent
    border-top-color: #444
    
.showdown-callout
  font-size: 0.9em
  line-height: 150%
  text-align: center
  background: $site-primary
  color: #333
  padding: 16px 16px 15px
  margin: 20px 0 0 0
  a
    color: black
    font-weight: bold
      
.subscribe
  padding: 25px 15px
  margin: 15px 0
  text-align: center
  border: 1px dashed darken($site-secondary, 10%)
  +border-radius(6px)
  label
    display: block
    text-align: center
    margin-bottom: 8px
    font-size: 18px
    line-height: 150%
  input
    font-family: $body-family
    font-size: 18px
    background: white
    border: 2px solid $site-primary
    padding: 6px 10px
    width: 100%
    max-width: 300px
    &:focus
      border: 2px solid lighten($site-primary, 10%)
      outline: none
  button
    padding: 12px 14px 10px
    font-size: 16px
    line-height: 16px
    font-weight: bold
    font-family: $headings-family
    text-transform: uppercase
    background: $site-primary
    border: 0
    cursor: pointer

@media screen and (max-width: 480px)
  .subscribe input
    max-width: 100%
  .subscribe button
    display: block
    width: 100%
    margin-top: 10px

